--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <script src="js/lightbox-plus-jquery.min.js"></script>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/lightbox.min.css">
     <title>Portefolio</title>
 </head>
 <body>
@@ -55,34 +57,34 @@
     <!-- Mes réalisation -->
     <div id="realisation" class="section dark">
         <div class="boxed texte-center">
-            <h2>Découvrez mes réalisation </h2>
+            <h2>Découvrez mes réalisations </h2>
             <div class="flex wrap gap20 space-between">
                 <div class="w32 wm47 realisation">
-                    <a href="realisations/realisation1.html">
+                    <a href="realisations/realisation1.html#realisation-1">
                         <img src="assets/images/stage/stage_1.png" alt="carte ">
                         <h3 class="bull"> Stage - carte web</h3>
                     </a>
                 </div>
                 <div class="w32 wm47 realisation">
-                    <a href="/">
+                    <a href="realisations/realisation1.html#realisation-2">
                         <img src="assets/images/fme/fme_1.png" alt="carte ">
                         <h3 class="bull"> Projet FME</h3>
                     </a>
                 </div>
                 <div class="w32 wm47 realisation">
-                    <a href="/">
+                    <a href="realisations/realisation1.html#realisation-3">
                         <img src="assets/images/chambre-agriculture/agri_3.png" alt="carte ">
                         <h3 class="bull"> Projet chambre d'agriculture</h3>
                     </a>
                 </div>
                 <div class="w32 wm47 realisation">
-                    <a href="/">
+                    <a href="realisations/realisation1.html#realisation-4">
                         <img src="assets/images/analyse-spatial/as_4.png" alt="carte ">
                         <h3 class="bull"> Analyse spatial</h3>
                     </a>
                 </div>
                 <div class="w32 wm47 realisation">
-                    <a href="/">
+                    <a href="realisations/realisation1.html#realisation-5">
                         <img src="assets/images/etude-impact/impact_1.png" alt="carte ">
                         <h3 class="bull"> Etude d'impact</h3>
                     </a>
@@ -95,10 +97,11 @@
     <div id="centre-interet" class="section dark">
         <div class="boxed texte-center ">
             <h2>Centre d'intéret </h2>
-            <p>Voici quelque un de mes travaux réaliser dans le cadre de ma formation.</p>
+            <p>Voici quelques une de mes autres centres d'intéret en dehord de la géomatique.</p>
             <div class="flex toColumn gap20">
                 <div class="w25 wm100 skill ">
-                    <img src="assets/images/interet/dessin.PNG" alt="">
+                    <a href="assets/images/interet/dessin.PNG" data-lightbox="Dessin" data-title="Mes dessin d'illustration" > <img src="assets/images/interet/dessin.PNG" alt=""></a>
+                    <a href="assets/images/interet/dessin2.jpg" data-lightbox="Dessin" data-title="Mes dessin d'illustration" ></a>
                     <h3> Créativité</h3>
                 </div>
                 <div class="w25 wm100 skill ">
@@ -108,6 +111,10 @@
                 <div class="w25 wm100 skill ">
                     <img src="assets/images/interet/modelisation.JPG" alt="">
                     <h3> Modélisation</h3>
+                </div>
+                <div class="w25 wm100 skill ">
+                    <img src="assets/images/interet/dessin.PNG" alt="">
+                    <h3> mécanique</h3>
                 </div>
 
             </div>
@@ -128,7 +135,7 @@
         </div>
     </div>
         
-
+    <script src="js/lightbox.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
