--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
             <h1>Portefolio</h1>
             <h1> RIDJALI Hassani</h1>
             <p> Etudiant en Master 2 géographie numerique </p>
+            <ul class="competances">
+                <li id="color-comp1" class="comp-w50"> <a href="/">Cartographie</a></li>
+                <li id="color-comp2" class="comp-w50"> <a href="/">Administartion de Bdd</a></li>
+                <li id="color-comp3" class="comp-w50"> <a href="/">Developement</a></li>
+            </ul>
         </div>
         <img src="assets/images/main-images/profil.jpg" class="img-profil" alt="">
     </div>
@@ -45,10 +50,10 @@
         <div class="boxed">
             <div class="flex toColumn mCenter">
                 <div class="w40 wm100">
-                    <h2>A propos de moi </h2>
+                    <h2>A propos</h2>
                 </div>
                 <div class="W60 wm100">
-                    <p> Mon objectif professionnel est de devenir géomaticien. Pour atteindre cet objectif, je suis déterminé à mettre en œuvre toutes les compétences que j'ai acquises au cours de mon cursus scolaire.
+                    <p> Etudiant en master 2 géographie numèrique mon objectif professionnel est de devenir géomaticien. Pour atteindre cet objectif, je suis déterminé à mettre en œuvre toutes les compétences que j'ai acquises au cours de mon cursus scolaire.
                         Je m’intéresse tout particulièrement aux  domaines de l’aménagement, à l'élaboration de projets et à la modélisation informatique.</p>
                 </div>
             </div>
@@ -102,11 +107,11 @@
                 <div class="w25 wm100 skill ">
                     <a href="assets/images/interet/dessin.PNG" data-lightbox="Dessin" data-title="Mes dessin d'illustration" > <img src="assets/images/interet/dessin.PNG" alt=""></a>
                     <a href="assets/images/interet/dessin2.jpg" data-lightbox="Dessin" data-title="Mes dessin d'illustration" ></a>
-                    <h3> Créativité</h3>
+                    <h3> Dessin d'illustration</h3>
                 </div>
                 <div class="w25 wm100 skill ">
                     <img src="assets/images/interet/dessin2.jpg" alt="">
-                    <h3> Vidéo</h3>
+                    <h3> Montage video</h3>
                 </div>
                 <div class="w25 wm100 skill ">
                     <img src="assets/images/interet/modelisation.JPG" alt="">
@@ -114,7 +119,7 @@
                 </div>
                 <div class="w25 wm100 skill ">
                     <img src="assets/images/interet/dessin.PNG" alt="">
-                    <h3> mécanique</h3>
+                    <h3> Mécanique</h3>
                 </div>
 
             </div>
@@ -131,8 +136,8 @@
                     <span class="value"> teste@test.com</span>
                 </div>
             </div>
-
         </div>
+        
     </div>
         
     <script src="js/lightbox.js"></script>
