--- a/realisations/realisation1.html
+++ b/realisations/realisation1.html
@@ -35,10 +35,10 @@
     <!-- Contenue mes réalisations  -->
     <div id="realisation" class="section dark">
         <div class="boxed texte-center">
-            <h1>Découvrez mes réalisation </h1>
+            <h1 class="titre-real">Découvrez mes réalisation </h1>
         </div>
         <div id="realisation-1">
-            <h2>1. Stage:  </h2>
+            <h2>Stage master 1:  </h2>
             <div class="galerie">
                 <div id="glr_1" class="wrapper">
                     <img id="left" class="fleche" src="../assets/images/main-images/prev.png" alt="fleche gauche">
@@ -81,6 +81,7 @@
                     </u>
                 </p>
             </div>
+            <div class="ligne"></div>
         </div>
 
         <div id="realisation-2">
@@ -113,6 +114,7 @@
                     </u>
                 </p>
             </div>
+            <div class="ligne"></div>
         </div>
 
         <div id="realisation-3">
@@ -152,6 +154,7 @@
                     </u>
                 </p>
             </div>
+            <div class="ligne"></div>
         </div>
 
         <div id="realisation-4">
@@ -187,6 +190,7 @@
                     </u>
                 </p>
             </div>
+            <div class="ligne"></div>
         </div>
 
         <div id="realisation-5">
@@ -225,9 +229,8 @@
                     </u>
                 </p>
             </div>
-        </div>
-
-        
+            <div class="ligne"></div>
+        </div> 
 
     </div> 
 
