--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="shortcut icon" href="assets/images/main-images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="js/lightbox-plus-jquery.min.js"></script>
     <link rel="stylesheet" href="css/styles.css">
@@ -23,7 +24,7 @@
                 <ul class="header-menu">
                     <li> <a href="/">Accueil</a></li>
                     <li> <a href="#a-propos">A propos</a></li>
-                    <li> <a href="#realisation">Mes réalisation </a></li>
+                    <li> <a href="realisations/realisation1.html">Mes réalisation </a></li>
                     <li> <a href="#centre-interet">Centre d'interet</a></li>
                     <li> <a href="#contact">Contact</a></li>
                 </ul>
@@ -40,10 +41,10 @@
             <ul class="competances">
                 <li id="color-comp1" class="comp-w50"> <a href="/">Cartographie</a></li>
                 <li id="color-comp2" class="comp-w50"> <a href="/">Administartion de Bdd</a></li>
-                <li id="color-comp3" class="comp-w50"> <a href="/">Developement</a></li>
+                <li id="color-comp3" class="comp-w50"> <a href="/">Dévelopement</a></li>
             </ul>
         </div>
-        <img src="assets/images/main-images/profil.jpg" class="img-profil" alt="">
+        <img src="assets/images/main-images/profil.jpg" class="img-profil" alt="photo de profil">
     </div>
     <!-- A propos de moi  -->
     <div id="a-propos" class="section">
@@ -54,7 +55,7 @@
                 </div>
                 <div class="W60 wm100">
                     <p> Etudiant en master 2 géographie numèrique mon objectif professionnel est de devenir géomaticien. Pour atteindre cet objectif, je suis déterminé à mettre en œuvre toutes les compétences que j'ai acquises au cours de mon cursus scolaire.
-                        Je m’intéresse tout particulièrement aux  domaines de l’aménagement, à l'élaboration de projets et à la modélisation informatique.</p>
+                        Je suis particulièrement intéressé par l’élaboration de projets et la modélisation informatique, notamment dans le domaine de l’aménagement et la gestion territorial.</p>
                 </div>
             </div>
         </div>
@@ -62,7 +63,7 @@
     <!-- Mes réalisation -->
     <div id="realisation" class="section dark">
         <div class="boxed texte-center">
-            <h2>Découvrez mes réalisations </h2>
+            <h2>Découvrez mes dérnières réalisations </h2>
             <div class="flex wrap gap20 space-between">
                 <div class="w32 wm47 realisation">
                     <a href="realisations/realisation1.html#realisation-1">
@@ -70,12 +71,12 @@
                         <h3 class="bull"> Stage - carte web</h3>
                     </a>
                 </div>
-                <div class="w32 wm47 realisation">
+                <!-- <div class="w32 wm47 realisation">
                     <a href="realisations/realisation1.html#realisation-2">
                         <img src="assets/images/fme/fme_1.png" alt="carte ">
                         <h3 class="bull"> Projet FME</h3>
                     </a>
-                </div>
+                </div> -->
                 <div class="w32 wm47 realisation">
                     <a href="realisations/realisation1.html#realisation-3">
                         <img src="assets/images/chambre-agriculture/agri_3.png" alt="carte ">
@@ -88,52 +89,72 @@
                         <h3 class="bull"> Analyse spatial</h3>
                     </a>
                 </div>
-                <div class="w32 wm47 realisation">
+                <!-- <div class="w32 wm47 realisation">
                     <a href="realisations/realisation1.html#realisation-5">
                         <img src="assets/images/etude-impact/impact_1.png" alt="carte ">
                         <h3 class="bull"> Etude d'impact</h3>
                     </a>
-                </div>
+                </div> -->
             </div>
         </div>
     </div> 
+
+    <!-- Personnalisation lightbox -->
+    <script>
+        lightbox.option({
+        'resizeDuration': 100,
+        'wrapAround': true
+        })
+    </script>
 
     <!-- Centre d'interet  -->
     <div id="centre-interet" class="section dark">
         <div class="boxed texte-center ">
             <h2>Centre d'intéret </h2>
             <p>Voici quelques une de mes autres centres d'intéret en dehord de la géomatique.</p>
-            <div class="flex toColumn gap20">
-                <div class="w25 wm100 skill ">
+            <div class="flex wrap space-between gap20">
+                <div class="w25 wm47 skill ">
                     <a href="assets/images/interet/dessin.PNG" data-lightbox="Dessin" data-title="Mes dessin d'illustration" > <img src="assets/images/interet/dessin.PNG" alt=""></a>
                     <a href="assets/images/interet/dessin2.jpg" data-lightbox="Dessin" data-title="Mes dessin d'illustration" ></a>
+                    <a href="assets/images/interet/dessin3.PNG" data-lightbox="Dessin" data-title="Mes dessin d'illustration" ></a>
+                    <a href="assets/images/interet/dessin4.jpg" data-lightbox="Dessin" data-title="Mes dessin d'illustration" ></a>
+                    <a href="assets/images/interet/dessin5.PNG" data-lightbox="Dessin" data-title="Mes dessin d'illustration" ></a>
                     <h3> Dessin d'illustration</h3>
                 </div>
-                <div class="w25 wm100 skill ">
-                    <img src="assets/images/interet/dessin2.jpg" alt="">
-                    <h3> Montage video</h3>
+                <div class="w25 wm47 skill ">
+                    <a href="assets/images/interet/montage2.PNG" data-lightbox="video" data-title="Mes montage vidéo" > <img src="assets/images/interet/montage2.PNG" alt=""></a>
+                    <a href="assets/images/interet/montage3.png" data-lightbox="video" data-title="Mes montage vidéo" > </a>
+                    <h3> Montage vidéo</h3>
                 </div>
-                <div class="w25 wm100 skill ">
-                    <img src="assets/images/interet/modelisation.JPG" alt="">
+                <div class="w25 wm47 skill ">
+                    <a href="assets/images/interet/modelisation.JPG" data-lightbox="modelisation" data-title="modelisation" > <img src="assets/images/interet/modelisation.JPG" alt=""></a>
+                    <a href="assets/images/interet/modelisation2.jpg" data-lightbox="modelisation" data-title="modelisation" > </a>
+                    <a href="assets/images/interet/modelisation3.png" data-lightbox="modelisation" data-title="modelisation" > </a>
+                    <a href="assets/images/interet/modelisation4.png" data-lightbox="modelisation" data-title="modelisation" > </a>
                     <h3> Modélisation</h3>
                 </div>
-                <div class="w25 wm100 skill ">
-                    <img src="assets/images/interet/dessin.PNG" alt="">
-                    <h3> Mécanique</h3>
-                </div>
-
             </div>
         </div>
     </div>
     <!-- Contact  -->
     <div id="contact" class="section dark">
-        <div class="boxed texte-center ">
+        <div class="boxed texte-center contact-align ">
             <h2>Contactez-moi</h2>
-            <div class="flex toColumn space-between">
-                <div class="w32 wm100 contact" >
-                    <span class="material-symbols-outlined icon">mail</span>
-                    <span class="label"> E-mail</span>
-                    <span class="value"> teste@test.com</span>
+            <div class=" flex contact-align toColumn gap20">
+                <div class="space-between ">
+                    <div class="w32  contact" >
+                        <span class="material-symbols-outlined icon">mail</span>
+                        <span class="label"> E-mail</span>
+                        <span class="value"> teste@test.com</span>
+                    </div>
+                </div>
+    
+                <div class="space-between">
+                    <div class="w32  contact" >
+                        <span class="material-symbols-outlined icon "> nest_heat_link_gen_3</span>
+                        <span class="label"> LinkedIn</span>
+                        <span class="value"> RIDJALI hassani</span>
+                    </div>
                 </div>
             </div>
         </div>
