--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="js/lightbox-plus-jquery.min.js"></script>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/lightbox.min.css">
-    <title>Portefolio</title>
+    <title>Portfolio</title>
 </head>
 <body>
     <!-- Navigation -->
@@ -23,9 +23,9 @@
                 </a>
                 <ul class="header-menu">
                     <li> <a href="/">Accueil</a></li>
-                    <li> <a href="#a-propos">A propos</a></li>
-                    <li> <a href="realisations/realisation1.html">Mes réalisation </a></li>
-                    <li> <a href="#centre-interet">Centre d'interet</a></li>
+                    <li> <a href="#a-propos">À propos</a></li>
+                    <li> <a href="realisations/realisation1.html">Mes réalisations </a></li>
+                    <li> <a href="#centre-interet">Centre d'intérêt</a></li>
                     <li> <a href="#contact">Contact</a></li>
                 </ul>
             </div>
@@ -35,13 +35,13 @@
     <div class="slider">
         <img src="assets/images/main-images/fond.jpg" class="silder-background" alt="carte fond">
         <div class="slider-content">
-            <h1>Portefolio</h1>
+            <h1>Portfolio</h1>
             <h1> RIDJALI Hassani</h1>
-            <p> Etudiant en Master 2 géographie numerique </p>
+            <p> Étudiant en Master 2 de Géographie Numérique </p>
             <ul class="competances">
                 <li id="color-comp1" class="comp-w50"> <a href="/">Cartographie</a></li>
-                <li id="color-comp2" class="comp-w50"> <a href="/">Administartion de Bdd</a></li>
-                <li id="color-comp3" class="comp-w50"> <a href="/">Dévelopement</a></li>
+                <li id="color-comp2" class="comp-w50"> <a href="/">Administration de bases de données</a></li>
+                <li id="color-comp3" class="comp-w50"> <a href="/">Développement</a></li>
             </ul>
         </div>
         <img src="assets/images/main-images/profil.jpg" class="img-profil" alt="photo de profil">
@@ -51,24 +51,24 @@
         <div class="boxed">
             <div class="flex toColumn mCenter">
                 <div class="w40 wm100">
-                    <h2>A propos</h2>
+                    <h2>À propos de moi</h2>
                 </div>
                 <div class="W60 wm100">
-                    <p> Etudiant en master 2 géographie numèrique mon objectif professionnel est de devenir géomaticien. Pour atteindre cet objectif, je suis déterminé à mettre en œuvre toutes les compétences que j'ai acquises au cours de mon cursus scolaire.
-                        Je suis particulièrement intéressé par l’élaboration de projets et la modélisation informatique, notamment dans le domaine de l’aménagement et la gestion territorial.</p>
+                    <p> Étudiant en Master 2 de Géographie Numérique, mon objectif professionnel est de devenir géomaticien. Pour atteindre cet objectif, je suis déterminé à mettre en œuvre toutes les compétences acquises au cours de mon cursus.
+                        Je suis particulièrement intéressé par l’élaboration de projets et la modélisation informatique, notamment dans le domaine de l’aménagement et de la gestion territoriale.</p>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Mes réalisation -->
+    <!-- Mes réalisations -->
     <div id="realisation" class="section dark">
         <div class="boxed texte-center">
-            <h2>Découvrez mes dérnières réalisations </h2>
+            <h2>Découvrez mes dernières réalisations </h2>
             <div class="flex wrap gap20 space-between">
                 <div class="w32 wm47 realisation">
                     <a href="realisations/realisation1.html#realisation-1">
                         <img src="assets/images/stage/stage_1.png" alt="carte ">
-                        <h3 class="bull"> Stage - carte web</h3>
+                        <h3 class="bull"> Stage - Carte web</h3>
                     </a>
                 </div>
                 <!-- <div class="w32 wm47 realisation">
@@ -80,7 +80,7 @@
                 <div class="w32 wm47 realisation">
                     <a href="realisations/realisation1.html#realisation-3">
                         <img src="assets/images/chambre-agriculture/agri_3.png" alt="carte ">
-                        <h3 class="bull"> Projet chambre d'agriculture</h3>
+                        <h3 class="bull"> Projet de la Chambre d’Agriculture </h3>
                     </a>
                 </div>
                 <div class="w32 wm47 realisation">
@@ -110,8 +110,8 @@
     <!-- Centre d'interet  -->
     <div id="centre-interet" class="section dark">
         <div class="boxed texte-center ">
-            <h2>Centre d'intéret </h2>
-            <p>Voici quelques une de mes autres centres d'intéret en dehord de la géomatique.</p>
+            <h2> Centres d’intérêt</h2>
+            <p>Voici quelques-uns de mes centres d’intérêt en dehors de la géomatique.</p>
             <div class="flex wrap space-between gap20">
                 <div class="w25 wm47 skill ">
                     <a href="assets/images/interet/dessin.PNG" data-lightbox="Dessin" data-title="Mes dessin d'illustration" > <img src="assets/images/interet/dessin.PNG" alt=""></a>
@@ -139,7 +139,7 @@
     <!-- Contact  -->
     <div id="contact" class="section dark">
         <div class="boxed texte-center contact-align ">
-            <h2>Contactez-moi</h2>
+            <h2>Contact</h2>
             <div class=" flex contact-align toColumn gap20">
                 <div class="space-between ">
                     <div class="w32  contact" >
