--- a/realisations/realisation1.html
+++ b/realisations/realisation1.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/styles-realisation.css">
     <link rel="stylesheet" href="../css/lightbox.min.css">
-    <title>Document</title>
+    <title>Realisation</title>
 </head>
 <body>
     <!-- Navigation -->
@@ -24,9 +24,9 @@
                 </a>
                 <ul class="header-menu">
                     <li> <a href="/">Accueil</a></li>
-                    <li> <a href="../index.html#a-propos">A propos</a></li>
-                    <li> <a href="#realisation">Mes réalisation </a></li>
-                    <li> <a href="../index.html#centre-interet">Centre d'interet</a></li>
+                    <li> <a href="../index.html#a-propos">À propos</a></li>
+                    <li> <a href="#realisation">Mes réalisations </a></li>
+                    <li> <a href="../index.html#centre-interet">Centres d'intérêt</a></li>
                     <li> <a href="#contact">Contact</a></li>
                 </ul>
             </div>
@@ -36,10 +36,10 @@
     <!-- Contenue mes réalisations  -->
     <div id="realisation" class="section dark">
         <div class="boxed texte-center">
-            <h1 class="titre-real">Découvrez mes réalisation </h1>
+            <h1 class="titre-real texte-center">Découvrez mes réalisations </h1>
         </div>
         <div id="realisation-1">
-            <h2>Stage master 1:  </h2>
+            <h2 class="texte-center">Stage master 1:  </h2>
             <div class="galerie">
                 <div id="glr_1" class="wrapper">
                     <img id="left" class="fleche" src="../assets/images/main-images/prev.png" alt="fleche gauche">
@@ -66,27 +66,22 @@
                     <img id="right" class="fleche" src="../assets/images/main-images/next.png" alt="">
                 </div>
             </div>
-            <div class="W40 wm100">
-                <p> Mon projet de stage a sans aucun doute été l'une des expériences les plus formatrices dans le domaine de la géomatique. 
-                    Pendant cinq mois, du 1er mars au 31 juillet 2024, j’ai collaboré avec les archives municipales de Saint-Étienne et le laboratoire EVS sur la réalisation d'une cartographie web des équipements sportifs de la ville. 
-                    L'objectif était de mettre en valeur les fonds historiques des équipements conservés par les archives municipales.
-                </p>
-                <p> Ce stage m'a permis de mettre en pratique les compétences acquises lors de ma première année de master, notamment :
-                    <u class="list-skill">
-                        <li>Travail en autonomie</li>
-                        <li>Mise en place d'une stratégie de collecte de données</li>
-                        <li>Structuration d’une base de données</li>
-                        <li>Formalisation des processus de traitement </li>
-                        <li>Réalisation d’une cartographie web</li>
-                        <li>Préparation d’un rendu de projet</li>
-                    </u>
-                </p>
+            <div class="W40 wm100 boxed">
+                <p> Mon projet de stage a sans aucun doute été l'une des expériences les plus formatrices dans le domaine de la géomatique. Pendant cinq mois, du 1er mars au 31 juillet 2024, j’ai travaillé avec les archives municipales de Saint-Étienne et le laboratoire EVS sur la réalisation d'une cartographie web des équipements sportifs de la ville. L'objectif était de mettre en valeur les fonds historiques des équipements conservés par les archives municipales.</p>
+                <p> Ce stage m'a permis de mettre en pratique les compétences acquises lors de ma première année de master, notamment : </p>
+                <u class="list-skill">
+                    <li>Travail en autonomie</li>
+                    <li>Mise en place d'une stratégie de collecte de données</li>
+                    <li>Structuration d’une base de données</li>
+                    <li>Formalisation des processus de traitement </li>
+                    <li>Réalisation d’une cartographie web</li>
+                    <li>Préparation d’un rendu de projet</li>
+                </u>
             </div>
             <div class="ligne"></div>
         </div>
-
         <div id="realisation-2">
-            <h2>Projet FME:  </h2>
+            <h2 class="texte-center">Projet FME:  </h2>
             <div class="galerie">
                 <div id="glr_2" class="wrapper">
                     <img id="left" class="fleche" src="../assets/images/main-images/prev.png" alt="fleche gauche">
@@ -104,23 +99,20 @@
                     <img id="right" class="fleche" src="../assets/images/main-images/next.png" alt="">
                 </div>
             </div>
-            <div class="W60 wm100">
-                <p> J’ai eu l’opportunité de travailler avec le logiciel FME (Feature Manipulation Engine) dans le cadre d'un projet mené en master 1 de géographie numérique. FME est un outil puissant d'ETL spatial, permettant de convertir, transformer et intégrer rapidement des données. Pour ce projet, j’ai développé une application qui met à jour une carte en ligne (ArcGIS Online) à partir de données issues d’une API.
-                </p>
-                <p> Les compétences acquises lors de ce projet sont :
-                    <u class="list-skill">
-                        <li>Rédaction d’une notice technique destinée aux utilisateurs et administrateurs de l'application</li>
-                        <li>Création et mise à jour d’une cartographie en lignes</li>
-                        <li>Première expérience dans l’utilisation d'API</li>
-                    </u>
-                </p>
+            <div class="W60 wm100 boxed">
+                <p> J’ai eu l’opportunité de travailler avec le logiciel FME (Feature Manipulation Engine) dans le cadre d'un projet mené en master 1 de géographie numérique. FME est un outil puissant d'ETL spatial, permettant de convertir, transformer et intégrer rapidement des données. Pour ce projet, j’ai développé une application qui met à jour une carte en ligne (ArcGIS Online) à partir de données issues d’une API.</p>
+                <p> Les compétences acquises lors de ce projet sont : </p>
+                <u class="list-skill">
+                    <li> Rédaction d’une notice technique destinée aux utilisateurs et administrateurs de l'application</li>
+                    <li>Création et mise à jour d’une cartographie en ligne</li>
+                    <li>Première expérience dans l’utilisation d'API</li>
+                </u>
             </div>
             <div class="ligne"></div>
         </div>
 
         <div id="realisation-3">
-            <h2>Projet géomatique Chambre d’agriculture :  </h2>
-        
+            <h2 class="texte-center">Projet géomatique Chambre d’agriculture :  </h2>
             <div class="galerie">
                 <div id="glr_3" class="wrapper">
                     <img id="left" class="fleche" src="../assets/images/main-images/prev.png" alt="fleche gauche">
@@ -144,22 +136,20 @@
                     <img id="right" class="fleche" src="../assets/images/main-images/next.png" alt="">
                 </div>
             </div>
-            <div class="W60 wm100">
-                <p> Dans le cadre d’un projet mené avec la Chambre régionale d’agriculture Auvergne-Rhône-Alpes, mon groupe et moi avons été chargés de formaliser des données et de concevoir une maquette de carte en vue d’un futur stage. Ce projet portait sur la cartographie des outils et équipements de transformation agroalimentaire et de logistique présents en Auvergne-Rhône-Alpes.
-                </p>
-                <p> Grâce à ce projet, j’ai pu acquérir des compétences indispensables à la réussite d’un projet dans le domaine de la géomatique :
-                    <u class="list-skill">
-                        <li>Réalisation d'un état de l’art sur un sujet et proposition de solutions techniques répondant aux besoins du projet</li>
-                        <li>Organisation et conduite de réunions avec des intervenants externes</li>
-                        <li>Travail en équipe</li>
-                    </u>
-                </p>
+            <div class="W60 wm100 boxed">
+                <p> Dans le cadre d’un projet mené avec la Chambre régionale d’agriculture Auvergne-Rhône-Alpes, mon groupe et moi avons été chargés de formaliser des données et de concevoir une maquette de carte en vue d’un futur stage. Ce projet portait sur la cartographie des outils et équipements de transformation agroalimentaire et de logistique présents en Auvergne-Rhône-Alpes.                </p>
+                <p> Grâce à ce projet, j’ai pu acquérir des compétences indispensables à la réussite d’un projet dans le domaine de la géomatique :</p>
+                <u class="list-skill">
+                    <li>Réalisation d'un état de l’art sur un sujet et proposition de solutions techniques répondant aux besoins du projet</li>
+                    <li>Organisation et conduite de réunions avec des intervenants externes</li>
+                    <li>Travail en équipe</li>
+                </u>
             </div>
             <div class="ligne"></div>
         </div>
 
         <div id="realisation-4">
-            <h2>Analyse spatiale et Méthodes de représentation:  </h2>
+            <h2 class="texte-center">Analyse spatiale et Méthodes de représentation:  </h2>
             <div class="galerie">
                 <div id="glr_4" class="wrapper">
                     <img id="left" class="fleche" src="../assets/images/main-images/prev.png" alt="fleche gauche">
@@ -180,22 +170,21 @@
                     <img id="right" class="fleche" src="../assets/images/main-images/next.png" alt="">
                 </div>
             </div>
-            <div class="W60 wm100">
-                <p>Un des projets marquants sur lequel j’ai travaillé est l'analyse spatiale et ses applications. Ce projet consistait à réaliser une série de cartes basées sur différentes bases de données, avec pour objectif d'explorer toutes les méthodes de représentation des données dans l'espace.
-                </p>
-                <p> Grâce à ce projet, j’ai pu acquérir des compétences indispensables à la réussite d’un projet dans le domaine de la géomatique :
-                    <u class="list-skill">
-                        <li>Collecte et traitement statistique des données</li>
-                        <li>Formalisation de la méthodologie de traitement</li>
-                        <li>Modes de représentation cartographique</li>
-                    </u>
-                </p>
+            <div class="W60 wm100 boxed">
+                <p>Un des projets marquants sur lequel j’ai travaillé est l'analyse spatiale et ses applications. Ce projet consistait à réaliser une série de cartes basées sur différentes bases de données, avec pour objectif d'explorer toutes les méthodes de représentation des données dans l'espace. </p>
+                <p> Grâce à ce projet, j’ai pu acquérir des compétences indispensables à la réussite d’un projet dans le domaine de la géomatique :</p>
+                <u class="list-skill">
+                    <li>Collecte et traitement statistique des données</li>
+                    <li>Formalisation de la méthodologie de traitement</li>
+                    <li>Modes de représentation cartographique</li>
+                </u>
+                
             </div>
             <div class="ligne"></div>
         </div>
 
         <div id="realisation-5">
-            <h2>Étude d’impact :  </h2>
+            <h2 class="texte-center">Étude d’impact :  </h2>
             <div class="galerie">
                 <div id="glr_5" class="wrapper">
                     <img id="left" class="fleche" src="../assets/images/main-images/prev.png" alt="fleche gauche">
@@ -219,16 +208,14 @@
                     <img id="right" class="fleche" src="../assets/images/main-images/next.png" alt="">
                 </div>
             </div>
-            <div class="W60 wm100">
-                <p>Dans le cadre de mon projet de fin de licence en géographie et aménagement, j’ai réalisé une étude d’impact environnementale sur le projet d’extension d’un réseau de chauffage urbain dans la commune d’Épernay (Marne). 
-                </p>
-                <p> Ce projet individuel m’a permis de consolider mon expérience dans la structuration de projet et la rédaction de rapports.
-                    <u class="list-skill">
-                        <li>Collecte d’informations</li>
-                        <li>Cartographie d’un projet d’aménagement</li>
-                        <li>Analyse et critique d’un projet</li>
-                    </u>
-                </p>
+            <div class="W60 wm100 boxed">
+                <p>Dans le cadre de mon projet de fin de licence en géographie et aménagement, j’ai réalisé une étude d’impact environnementale qui portait sur un projet d’extension d’un réseau de chauffage urbain dans la commune d’Épernay (Marne). </p>
+                <p> Ce projet individuel m’a permis de consolider mon expérience dans la structuration de projet et la rédaction de rapports : </p>
+                <u class="list-skill">
+                    <li>Collecte d’informations</li>
+                    <li>Cartographie d’un projet d’aménagement</li>
+                    <li>Analyse et critique d’un projet</li>
+                </u>
             </div>
             <div class="ligne"></div>
         </div> 
@@ -238,7 +225,7 @@
     <!-- Bas de page les contact  -->
     <div id="contact" class="section dark">
         <div class="boxed texte-center contact-align ">
-            <h2>Contactez-moi</h2>
+            <h2>Contact</h2>
             <div class=" flex contact-align toColumn gap20">
                 <div class="space-between ">
                     <div class="w32  contact" >
