--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <img src="assets/images/main-images/logo.png" alt="Logo du site">
                 </a>
                 <ul class="header-menu">
-                    <li> <a href="/">Accueil</a></li>
+                    <li> <a href="index.html">Accueil</a></li>
                     <li> <a href="#a-propos">À propos</a></li>
                     <li> <a href="realisations/realisation1.html">Mes réalisations </a></li>
                     <li> <a href="#centre-interet">Centre d'intérêt</a></li>
