--- a/index.html
+++ b/index.html
@@ -145,14 +145,14 @@
                     <div class="w32  contact" >
                         <span class="material-symbols-outlined icon">mail</span>
                         <span class="label"> E-mail</span>
-                        <span class="value"> teste@test.com</span>
+                        <span class="value"> h.ridjali@univ-lyon2.fr</span>
                     </div>
                 </div>
     
                 <div class="space-between">
                     <div class="w32  contact" >
                         <span class="material-symbols-outlined icon "> nest_heat_link_gen_3</span>
-                        <span class="label"> LinkedIn</span>
+                        <span class="label"> <a href="https://www.linkedin.com/in/hassani-ridjali-a79374268/">LinkedIn</a> </span>
                         <span class="value"> RIDJALI hassani</span>
                     </div>
                 </div>
