--- a/realisations/realisation1.html
+++ b/realisations/realisation1.html
@@ -19,11 +19,11 @@
                 <button onclick="openMenu()" class="header-menu-mobile">
                     <span class="material-symbols-outlined">menu</span>
                 </button>
-                <a href="/" class="header-logo">
+                <a href="#accueil" class="header-logo">
                     <img src="../assets/images/main-images/logo.png" alt="Logo du site">
                 </a>
                 <ul class="header-menu">
-                    <li> <a href="/">Accueil</a></li>
+                    <li> <a href="#accueil">Accueil</a></li>
                     <li> <a href="../index.html#a-propos">À propos</a></li>
                     <li> <a href="#realisation">Mes réalisations </a></li>
                     <li> <a href="../index.html#centre-interet">Centres d'intérêt</a></li>
@@ -231,14 +231,14 @@
                     <div class="w32  contact" >
                         <span class="material-symbols-outlined icon">mail</span>
                         <span class="label"> E-mail</span>
-                        <span class="value"> teste@test.com</span>
+                        <span class="value"> h.ridjali@univ-lyon2.fr</span>
                     </div>
                 </div>
     
                 <div class="space-between">
                     <div class="w32  contact" >
                         <span class="material-symbols-outlined icon "> nest_heat_link_gen_3</span>
-                        <span class="label"> LinkedIn</span>
+                        <span class="label"> <a href="https://www.linkedin.com/in/hassani-ridjali-a79374268/">LinkedIn</a> </span>
                         <span class="value"> RIDJALI hassani</span>
                     </div>
                 </div>
