--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
                 <button onclick="openMenu()" class="header-menu-mobile">
                     <span class="material-symbols-outlined">menu</span>
                 </button>
-                <a href="/" class="header-logo">
+                <div class="header-logo">
                     <img src="assets/images/main-images/logo.png" alt="Logo du site">
-                </a>
+                </div>
                 <ul class="header-menu">
-                    <li> <a href="#accueil">Accueil</a></li>
-                    <li> <a href="#a-propos">À propos</a></li>
+                    <li> <a href="#accueil" class="scroll-link">Accueil</a></li>
+                    <li> <a href="#a-propos" class="scroll-link">À propos</a></li>
                     <li> <a href="realisations/realisation1.html">Mes réalisations </a></li>
-                    <li> <a href="#centre-interet">Centre d'intérêt</a></li>
-                    <li> <a href="#contact">Contact</a></li>
+                    <li> <a href="#centre-interet" class="scroll-link">Centre d'intérêt</a></li>
+                    <li> <a href="#contact" class="scroll-link" >Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -152,7 +152,7 @@
                 <div class="space-between">
                     <div class="w32  contact" >
                         <span class="material-symbols-outlined icon "> nest_heat_link_gen_3</span>
-                        <span class="label"> <a href="https://www.linkedin.com/in/hassani-ridjali-a79374268/">LinkedIn</a> </span>
+                        <span class="label"> <a href="https://www.linkedin.com/in/hassani-ridjali-a79374268/" target="_blank">LinkedIn</a> </span>
                         <span class="value"> RIDJALI hassani</span>
                     </div>
                 </div>
