--- a/realisations/realisation1.html
+++ b/realisations/realisation1.html
@@ -19,11 +19,11 @@
                 <button onclick="openMenu()" class="header-menu-mobile">
                     <span class="material-symbols-outlined">menu</span>
                 </button>
-                <a href="#accueil" class="header-logo">
+                <div class="header-logo">
                     <img src="../assets/images/main-images/logo.png" alt="Logo du site">
-                </a>
+                </div>
                 <ul class="header-menu">
-                    <li> <a href="#accueil">Accueil</a></li>
+                    <li> <a href="../index.html#accueil">Accueil</a></li>
                     <li> <a href="../index.html#a-propos">À propos</a></li>
                     <li> <a href="#realisation">Mes réalisations </a></li>
                     <li> <a href="../index.html#centre-interet">Centres d'intérêt</a></li>
@@ -73,7 +73,7 @@
                     <li>Travail en autonomie</li>
                     <li>Mise en place d'une stratégie de collecte de données</li>
                     <li>Structuration d’une base de données</li>
-                    <li>Formalisation des processus de traitement </li>
+                    <li>Formalisation de processus de traitement </li>
                     <li>Réalisation d’une cartographie web</li>
                     <li>Préparation d’un rendu de projet</li>
                 </u>
