--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
                 data-title="Dessin d'illustration"
                 data-images='[
                     "assets/images/interet/dessin.PNG",
-                    "assets/images/interet/dessin2.PNG",
+                    "assets/images/interet/dessin2.png",
                     "assets/images/interet/dessin3.PNG",
-                    "assets/images/interet/dessin4.PNG",
+                    "assets/images/interet/dessin4.png",
                     "assets/images/interet/dessin5.PNG"
                 ]'>
                 <img src="assets/images/interet/dessin.PNG" alt="" class="rounded-circle" style=" object-fit: cover;">
@@ -150,14 +150,14 @@
 
             <!-- Montage vidéo -->
             <div class="w25 wm47 skill text-center">
-                <a href="assets/images/interet/montage2.PNG"
+                <a href="assets/images/interet/montage1.png"
                 class="gallery-thumb"
                 data-gallery="montage"
                 data-title="Montage vidéo"
                 data-images='[
-                    "assets/images/interet/montage1.PNG",
+                    "assets/images/interet/montage1.png",
                     "assets/images/interet/montage2.PNG",
-                    "assets/images/interet/montage3.PNG"
+                    "assets/images/interet/montage3.png"
                 ]'>
                 <img src="assets/images/interet/montage2.PNG" alt="" class="rounded-circle" style=" object-fit: cover;">
                 </a>
@@ -166,13 +166,13 @@
 
             <!-- Modélisation -->
             <div class="w25 wm47 skill text-center">
-                <a href="assets/images/interet/modelisation.JPG"
+                <a href="assets/images/interet/modelisation.png"
                 class="gallery-thumb"
                 data-gallery="modelisation"
                 data-title="Modélisation"
                 data-images='[
-                    "assets/images/interet/modelisation.PNG",
-                    "assets/images/interet/modelisation2.PNG",
+                    "assets/images/interet/modelisation.png",
+                    "assets/images/interet/modelisation2.png",
                     "assets/images/interet/modelisation3.png",
                     "assets/images/interet/modelisation4.png"
                 ]'>
