--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                 <h1> RIDJALI Hassani</h1>
                 <p> Géomaticien junior </p>
                 <ul class="competances">
-                    <li id="color-comp1" class="comp-w50"> <a href="/"> Cartographie </a></li>
-                    <li id="color-comp1" class="comp-w50"> <a href="/"> Web-SIG </a></li>
-                    <li id="color-comp2" class="comp-w50"> <a href="/"> Gestion BDD </a></li>
-                    <li id="color-comp3" class="comp-w50"> <a href="/"> Codage</a></li>
+                    <li id="color-comp1" class="comp-w50"> Cartographie </li>
+                    <li id="color-comp1" class="comp-w50"> Web-SIG </li>
+                    <li id="color-comp2" class="comp-w50"> Gestion BDD </li>
+                    <li id="color-comp3" class="comp-w50"> Codage </li>
                 </ul>
             </div>
             <img src="assets/images/main-images/profil.jpg" class="img-profil" alt="photo de profil">
@@ -83,7 +83,7 @@
 
             <!-- 2. GALERIE DE MES REALISATIONS -->
             <h2 class="mb-4 text-center">Mes réalisations</h2>
-            <div id="" class="section">
+            <div id="" class="container">
                 <a href="page/realisation.html#realisation-1">
                     <div id="grid">
                         <div class="grid-item" id="nature-1">
@@ -114,6 +114,7 @@
                             <img src="./assets/images/stage_m1/stage_3.png" alt="" class="grid-img" />
                         </div>
                     </div>
+                    
                 </a>
             </div>
 
